manifests/4.08/todo-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo
  name: todo-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      volumes:
        - name: cache
          emptyDir: {}
      containers:
        - name: todo-frontend
          image: ahojukka5/dwk-todo-frontend:4.08
          volumeMounts:
            - name: cache
              mountPath: /var/cache/jukka
          resources:
            limits:
              cpu: "250m"
              memory: "64Mi"
          imagePullPolicy: Always
