manifests/4.08/todo-frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: todo
  name: todo-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: todo-frontend-svc
              servicePort: 3000
